files/manifests/traefik/traefik-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: traefik-external-ingress-proxy
  name: traefik-external-ingress-proxy
  namespace: default
spec:
  selector:
    app: traefik-external-ingress-proxy
  type: NodePort
  externalTrafficPolicy: Local	# Pass client ip to backends
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 31285
  - name: https
    protocol: TCP
    port: 443
    nodePort: 31287
  - name: http-admin
    protocol: TCP
    port: 8080
    nodePort: 31286
  selector:
    app: traefik-external-ingress-proxy
